force-app/main/default/objects/Evony_SpecialtySkill__c/fields/MarchingGroundTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>MarchingGroundTroopAttack__c</fullName>
    <label>Marching Ground Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>