force-app/main/default/objects/Evony_SpecialtySkill__c/fields/MarchingGroundTroopDefense__c.field-meta.xml
<CustomField>
    <fullName>MarchingGroundTroopDefense__c</fullName>
    <label>Marching Ground Troop Defense</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>