force-app/main/default/objects/Evony_SpecialtySkill__c/fields/MarchingMountedTroopDefense__c.field-meta.xml
<CustomField>
    <fullName>MarchingMountedTroopDefense__c</fullName>
    <label>Marching Mounted Troop Defense</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>