force-app/main/default/objects/Evony_SpecialtySkill__c/fields/RangedTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>RangedTroopAttack__c</fullName>
    <label>Ranged Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>